--- a/css/sun.css
+++ b/css/sun.css
@@ -37,3 +37,18 @@
 .sun:hover {
 	cursor: grab;
 }
+
+@media screen and (max-width: 700px) {
+	.moon { 
+		top:5px;
+		left:15px;
+		width:50px;
+		height:50px;
+	}
+	.sun { 
+		top:200px;
+		left:15px; 
+		width:50px;
+		height:50px;
+	}
+}
